# guetzli-android

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/ploarxiong/guetzli/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/cl/Redmi Note 4X/: clguetzli.cl
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/guetzli/clguetzli/: clguetzli.cl  clguetzli.cl.cpp  clguetzli.cl.h  clguetzli.h  clguetzli_test.cpp  libopencl.c  ocl.h  utils.cpp
app/src/main/cpp/guetzli/clguetzli/include/: libopencl.h
app/src/main/cpp/guetzli/clguetzli/include/CL/: cl.h  cl.hpp  cl_ext.h  cl_gl.h  cl_gl_ext.h  opencl.h
app/src/main/cpp/guetzli/guetzli/: debug_print.cc  guetzli.cc
app/src/main/java/com/ploarxiong/guetzli/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ploarxiong/guetzli/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
